# pi_server

./: .env.example  .gitignore  README.md  config.py  deploy-api.service  deployer.py  main.py  projects.json  pyproject.toml  restart-later.sh  server.sh
.github/workflows/: deploy.yml
